# rudo

./: .gitignore  Cargo.toml  FEASIBILITY_ASSESSMENT.md  LICENSE  README.md  TERMINAL_FORK_PLAN.md  build.rs  flake.nix  meson.build  result
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/: README.md
crates/termvide-derive/: Cargo.toml  README.md
csrc/: rudo_font.c
docs/: terminal-compat-probe.md  terminal-wave3-audit.md  terminal-wave5-audit.md  termvide-terminfo.md
extra/compat/: pty_probe.py
extra/terminfo/: install-termvide-terminfo.sh  termvide.info
include/rudo/: cli.h  common.h  config.h  core.h  defaults.h  input.h  keybindings.h  log.h  render.h  terminal.h  toml.h  wayland.h
neovide-derive/src/: lib.rs
nix/modules/: home-manager.nix  nixos.nix
protocols/: fractional-scale-v1-client-protocol.h  viewporter-client-protocol.h  xdg-decoration-unstable-v1-client-protocol.h  xdg-shell-client-protocol.h
src/: cli.c  cli.rs  cmd_line.rs  config.c  config.rs  contracts.rs  core.c  core_app.rs  cursor.c  cursor.rs  cursor_vfx.rs  cursor_vfx_full.c  defaults.rs  dlopen.rs  error_handling.rs  font.rs  fontconfig_ffi.rs  freetype_ffi.rs  input.c  input.rs  keybindings.c  keybindings.rs  lib.rs  log.c  logging.rs  main.c  main.rs  protocols.rs  pty.c  pty.rs  render_font.c  renderer_font.rs  software_renderer.c  software_renderer.rs  terminal.c  toml.c  toml_parser.rs  util.c  version.rs  wayland.c  (+5 more)
src/editor/: window.rs
src/platform/macos/: mod.rs  settings.rs
src/platform/wayland/: dispatch.rs  keyboard.rs  mod.rs  shm.rs
src/profiling/: profiling_disabled.rs
src/pty/: mod.rs  unix.rs  windows.rs
src/render/: bridge.rs
src/renderer/: animation_utils.rs  grid_renderer.rs  mod.rs  progress_bar.rs  rendered_layer.rs  rendered_window.rs
src/renderer/box_drawing/: box_drawing_test.txt
src/renderer/cursor_renderer/: blink.rs  cursor_vfx.rs  mod.rs
src/renderer/fonts/: caching_shaper.rs  font_loader.rs  font_options.rs
src/session/: bridge.rs  mod.rs
src/settings/: config.rs  from_value.rs  mod.rs  window_size.rs
src/terminal/: cell.rs  cursor.rs  damage.rs  grid.rs  input.rs  mod.rs  mouse.rs  parser.rs  runtime.rs  screen.rs  selection.rs  session.rs  state.rs  style.rs  theme.rs
src/ui/: mod.rs
src/utils/: mod.rs
src/window/: application.rs  error_window.rs  keyboard_manager.rs  mod.rs  mouse_manager.rs  settings.rs  window_wrapper.rs
src/window/macos/: hotkey.rs
src/window/wrapper/: clipboard_utils.rs  command_bridge.rs  mod.rs
tests/: test_core.c  test_terminal.c
