[package]
name = "rudo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "A Wayland-native terminal emulator with animated cursor rendering"
keywords = ["terminal", "wayland", "vt100", "xterm"]
categories = ["command-line-utilities", "gui"]

[workspace]

[dependencies]
# Wayland-only software frontend
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }

# Terminal
vte = "0.15"

# System
libc = "0.2"

# Utils
unicode-width = "0.2"

[profile.dev]
opt-level = 1        # basic optimizations even in debug (much faster runtime)
debug = 1            # line tables only (faster builds + linking)

[profile.dev.package."*"]
opt-level = 0        # don't optimize deps - faster compile

[profile.release]
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true

[profile.maxperf]
inherits = "release"
lto = true
codegen-units = 1
