[package]
name = "termvide-derive"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Derive macros for Termvide"
homepage = "https://github.com/y0usaf/termvide"
repository = "https://github.com/y0usaf/termvide"
readme = "README.md"
keywords = ["termvide", "terminal", "pty", "gui", "macros"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
convert_case = "0.8.0"
